--- a/src/templates/contact/view.html
+++ b/src/templates/contact/view.html
@@ -26,7 +26,7 @@
           </form>
 
 
-          <!-- COMMENT IN SUBLIMETEXT KB SHORTCUT IS CMD+/ -->
+          <!-- COMMENT IN SUBLIMETEXT KeyBoard SHORTCUT IS CMD+/ -->
           <!-- <form method='POST'> {% csrf_token %}
             <input type='text' class='form-control' placeholder='Name' name='fullname'>
             <input type='email' class='form-control' placeholder='Email' name='email'>
