--- a/src/templates/about_page.html
+++ b/src/templates/about_page.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,42 +9,30 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href='{% static "css/main.css" %}'>
 
     <div class='text-center'>
-      <h1>{{ title }}</h1>
-
+      <h1>{{title}}</h1>
+    </div>
+<!-- container -->
+    <div class='container'>
+      <div class='row'>
+        <div='col'>
+        {{content}}
+        <p class='pt-3'>{{ content }}</p>
     </div>
 
-    <div class ='container'>
-      <div class='row'>
-        <div class='col'>
-          <p>{{ content }}</p>
-          <div class='col-sm-6 col-12'>
-
-
-          <form method='POST'> {% csrf_token %}
-            {{ form }}
-            <button type='submit' class='btn btn-default'>Submit</button>
-          </form>
-
-
-          <!-- COMMENT IN SUBLIMETEXT KeyBoard SHORTCUT IS CMD+/ -->
-          <!-- <form method='POST'> {% csrf_token %}
-            <input type='text' class='form-control' placeholder='Name' name='fullname'>
-            <input type='email' class='form-control' placeholder='Email' name='email'>
-            <textarea name='content' class='form-control' placeholder='Your content'></textarea>
-
-          </form> -->
-
-
-
-          </div>
-        </div>
-
+   <div class='row'>
+        <div='col'>
+        {% if request.user.is_authenticated %}
+        <h1>Premium</h1>
+        <p class='pt-3'>{{ premium_content }}</p>
+        {% endif %}
       </div>
     </div>
-
-
+    </div>
+</div>
+  <!-- container -->
   </head>
   <body>
 
