Ver 004 Update: Featured option and html files.

--- a/src/products/templates/products/product_detail.html
+++ b/src/products/templates/products/product_detail.html
@@ -1,7 +1,8 @@
 {{ object.title }}
 <br/>
+{% if object.image %}
 <img src ='{{object.image.url}}' class='img-fluid' />
 <br/>
+{% endif %}
 {{object.description}}
 <br/>
-{{object.price}}
