--- a/src/products/templates/products/detail.html
+++ b/src/products/templates/products/detail.html
@@ -1,3 +1,8 @@
 {{ object.title }}
+<br/>
+{% if object.image %}
 <img src ='{{object.image.url}}' class='img-fluid' />
-
+<br/>
+{% endif %}
+{{object.description}}
+<br/>
